# xmd

./: .gitignore  CHANGELOG.md  CHAT.md  CHAT_DEMO.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists_modular.txt  COMPATIBILITY.md  CONFIG_REFACTOR_COMPLETE.md  CONTRIBUTING.md  CRITICAL_VIOLATIONS.md  DEBT_HUNTER_FINAL_REPORT.md  DEBT_REDUCTION_PROGRESS.md  DEBUGGING_VICTORY_REPORT.md  DEVELOPER_REFACTOR_SUPPORT.md  DEVELOPER_TASK_AST_MACROS.md  DEVTOOLS_QUICK_START.md  DEVTOOLS_REFACTOR_GUIDE.md  DEVTOOLS_URGENT_FIX.md  DUPLICATION_BASELINE_REPORT.md  FILE_ASSIGNMENTS.md  FINAL_DUPLICATION_VICTORY_REPORT.md  FUNCTION_EVALUATION_ANALYSIS.md  FUTURE_CHANGES.md  GENESIS_VIOLATION_REMEDIATION_PLAN.md  IMPLEMENTATION_REPORT.md  INCLUDE_FIX_PATTERN.md  MEMORY_OPTIMIZATION_PLAN.md  PHASE2_REFACTOR_STATUS.md  PHASE_2_VALIDATION_REPORT.md  POST_VICTORY_MAINTENANCE.md  PRODUCTION_CERTIFICATION_FINAL.md  PRODUCTION_GATE_CHECKLIST.md  README.md  REFACTOR_PLAN.md  SPRINT_FINAL_SUCCESS_REPORT.md  TEAMWORK.md  TEAM_ASSIGNMENTS.md  TECHNICAL_DEBT_ANALYSIS.md  (+290 more)
archive/temp_files/: BAO_CAO_TINH_HINH_DEVELOPER.md  BUILD_STATUS_24_PERCENT.txt  CMakeLists.txt  DEVELOPER_SUPPORT_FIXES.md  FINAL_4_LOOP_FIXES_33_TO_37.txt  FINAL_PARSER_FIXES_29_TO_35.txt  GENESIS_PRINCIPLE_ALERT.md  QUICK_PARSER_FIX_GUIDE.txt  URGENT_BRACE_FIXES_DETAILED.txt  URGENT_PARSER_FIXES.txt  URGENT_STATEMENT_FIX_35_TO_36.txt  VERIFIED_BUILD_STATUS.txt  ast_sources.txt  authentic_rename.sh  authenticity_cleanup.sh  batch_compile_test.sh  better_progress.sh  build_errors_12percent.txt  build_errors_report.txt  build_log.txt  build_master_status.sh  bulk_fix_remaining.sh  check_missing_comment_closures.sh  check_progress.sh  continuous_build_monitor.sh  continuous_progress_monitor.sh  current_build_errors.sh  current_build_log.txt  developer_support.sh  developer_verification_report.txt  final_comment_fix.sh  find_syntax_errors.sh  fix_all_ast_comments_final.sh  fix_all_comment_issues.sh  fix_ast_free_braces.sh  fix_ast_headers.sh  fix_ast_headers_enhanced.sh  fix_ast_headers_properly.sh  fix_ast_parse_class.sh  fix_ast_util_braces.sh  (+41 more)
blueprint/: amen.md  idea.md  prototype.md
chat/: README.md  ast_reorganization_update.md  chat.sh  messages.txt  msg_1754128688698_t3wi86701.txt  msg_1754128699332_ci1owpm3v.txt  msg_1754128916798_hrxv3qdd9.txt  msg_1754129440254_zevdyepgt.txt  msg_1754129482660_u2vuq81v2.txt  msg_1754129506143_kgy8v1d95.txt  msg_1754129513659_0cuogaq0d.txt  msg_1754129534927_ts8gd22xn.txt  msg_1754129543827_jxs6nfnsz.txt  msg_1754129552733_94a99ibn3.txt  msg_1754130001331_zng396rgt.txt  msg_1754130177069_602549mmy.txt  msg_1754130190987_a12wno33v.txt  msg_1754130193810_owf7kratg.txt  msg_1754130212006_gycmdkkw4.txt  msg_1754130222180_683a8c5fp.txt  msg_1754130247602_jjpomenk4.txt  msg_1754130278883_wg80rickz.txt  msg_1754130376348_7lqrceopv.txt  msg_1754130599563_4f958e7e3.txt  msg_1754130609462_in2af1ags.txt  msg_1754130700148_as4l6u9d5.txt  msg_1754131019478_c19htucp3.txt  msg_1754131034285_saupyxh9x.txt  msg_1754131038440_3ibkewtoz.txt  msg_1754131099264_plwqcqey3.txt  msg_1754131298700_ui949cxmx.txt  msg_1754131321024_fbw03g81y.txt  msg_1754131378866_mw4whr5g0.txt  msg_1754131500473_zaov6b8g0.txt  msg_1754131530951_6rzzeg2j9.txt  msg_1754131671178_xiudrvijl.txt  msg_1754131675815_09leb39ba.txt  msg_1754131684435_2qtlp2vul.txt  msg_1754131820501_ai1rok6jr.txt  msg_1754131832262_tq5xnt38g.txt  (+990 more)
cmake/: version.cmake.in
docs/: Doxyfile.in  INSTRUCTIONS.md  PRD.md  XMD_SYNTAX_GUIDE.md  _config.yml  architectural_guidelines.md  cli-reference.md  collaboration.md  index.md  macro_migration_example.md  multiline-directives.md  native-xmd-parser-design.md  quick-start.md  range-syntax.md  release-notes-v0.0.2.md  release-notes-v1.0.0.md  testing.md  troubleshooting.md  upgrade-guide.md
duplication_reports/: duplication_report_20250803_112437.txt  duplication_report_20250803_140936.txt
examples/: README.md  demo.md  phase1-test.md  test.md
include/: ast.h  ast_evaluator.h  ast_find_matching_endfor.h  ast_macros.h  ast_node.h  ast_parser.h  ast_process_directive_content.h  auditor_internal.h  c_api_internal.h  cli.h  conditional.h  config.h  config_internal.h  core_macros.h  date_functions.h  dependency.h  dependency_graph_internal.h  error.h  executor.h  executor_internal.h  flow.h  import_export.h  import_tracker.h  lexer.h  lexer_enhanced.h  limiter_internal.h  loop.h  main_internal.h  misc.h  module.h  module_internal.h  optimizer_internal.h  output.h  parser_internal.h  performance.h  platform.h  processor_internal.h  profiler_internal.h  resource.h  sandbox.h  (+15 more)
memory/: README.md  debthunter_progress.md
prompts/: README.md  debthunter.md  designer.md  developer.md  leader.md  spawn.md  systems.md  tester.md
release-artifacts/: install.sh
scripts/: enforce_compliance.sh  release.sh
showcase/: README.md  conditionals_demo.xmd  data_structures.xmd  functions_demo.xmd  hello_world.xmd  loops_demo.xmd
src/: main.c  main_cli.c  xmd_init.c  xmd_processor.c  xmd_processor.c.backup  xmd_stubs.c
swarm/: agent-10323.yaml  agent-1288.yaml  agent-31498.yaml  agent-3669.yaml  agent-8501.yaml
teamchat/: apex.md
teamwork/: .team_list  ACHIEVEMENT_SUMMARY.md  BUILD_ISSUE_ALERT.md  COORDINATION_UPDATE.md  EMERGENCY_DIRECTIVE.md  EMERGENCY_DIRECTIVE_REVISED.md  FINAL_TEAM_COORDINATION.md  README.md  TEAM_COORDINATION_STATUS.md  chat.md  cleanup.sh  dashboard.md  dashboard_fixed.md  dashboard_template.md  developer.md  header_handling_discussion.md  leader.md  principle_violation_analysis.md  refactoring_discussion.md  refactoring_test_results.md  refactoring_visual.md  systems.md  team_consensus_final.md  teamwork.sh  watch-demo.sh
teamwork_archive/: architect.md  developer.md  developer2.md  devops.md  leader.md  orchestrator.md  tester.md
templates/: setup.sh
test-standalone/: test.md
test-suite/: 01_variables.xmd  02_arrays.xmd  03_objects.xmd  04_functions.xmd  05_conditionals.xmd  06_loops.xmd  07_strings.xmd  08_fileio.xmd  09_comments.xmd  10_classes.xmd  11_errors.xmd  14_math.xmd  (+4 more)
(+2016 files in other folders)
